--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -25,66 +25,12 @@
 	--text-color: #fff;
 }
 
-%font-Muli-700 {
-	font: {
-		family: 'Muli';
-		weight: 700;
-		style: normal;
-	}
-}
+// %font-Muli-700 {
+// 	font: {
+// 		family: 'Muli';
+// 		weight: 700;
+// 		style: normal;
+// 	}
+// }
 
-%font-Muli-300 {
-	font: {
-		family: 'Muli';
-		weight: 300;
-		style: normal;
-	}
-}
 
-%font-Muli-400 {
-	font: {
-		family: 'Muli';
-		weight: 400;
-		style: normal;
-	}
-}
-
-%font-Muli-600 {
-	font: {
-		family: 'Muli';
-		weight: 600;
-		style: normal;
-	}
-}
-
-%font-Nunito-Regular-400 {
-	font: {
-		family: 'Nunito';
-		weight: 400;
-		style: normal;
-	}
-}
-
-%font-Playfair-Display-700 {
-	font: {
-		family: 'Playfair Display';
-		weight: 700;
-		style: normal;
-	}
-}
-
-%font-Playfair-Display-400 {
-	font: {
-		family: 'Playfair Display';
-		weight: 400;
-		style: normal;
-	}
-}
-
-%font-Poppins-700 {
-	font: {
-		family: 'Poppins';
-		weight: 700;
-		style: normal;
-	}
-}
