--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-	@extend %font-Muli-400;
-	background-color: var(--color-bg);
-	color: var(--color-text);
-	overflow-x: hidden;
+
+	background-color: #fff;
+	color: #000;
+
 }
