--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -24,7 +24,7 @@
 }
 
 .title {
-	@extend %font-Playfair-Display-700;
+	// @extend %font-Playfair-Display-700;
 	font-size: 42px;
 	line-height: 72px;
 	margin-bottom: 30px;
@@ -32,13 +32,11 @@
 
 }
 .subtitle {
-	@extend %font-Muli-400;
+	// @extend %font-Muli-400;
 	font-size: 16px;
 	line-height: 20px;
 	text-align: center;
 	margin-bottom: 60px;
 }
 
-// .descr {
-// 	font-size: 16px;
-// }
+
