--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,78 +1,3 @@
-.footer {
-	&__container {
-	}
-	&__main-block {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		margin: 120px 0;
-	}
-	&__title {
-		@extend %font-Poppins-700;
-		font-size: 22px;
-		line-height: 33px;
-		margin-bottom: 30px;
-	}
-	&__social-block {
-
-		display: flex;
-		justify-content: center;
-		margin-bottom: 40px;
-		column-gap: 30px
-	}
-	&__social-icon {
-	}
-	&__descr {
-		@extend %font-Muli-300;
-		font-size: 14px;
-		line-height: 18px;
-		margin-bottom: 47px;
-	}
-	&__menu {
-		margin-bottom: 0;
-	}
-	&__menu-list {
-		font-size: 18px;
-		line-height: 23px;
-		display: flex;
-		justify-content: center;
-	}
-	&__menu-item {
-		margin-right: 62px;
-		&:last-child {
-			margin-right: 0;
-		}
-	}
-	&__menu-item-link {
-	}
-	&__bottom-block {
-		padding: 30px 0;
-		border-top: 1px solid #d8d8d8;
-	}
-	&__copyright {
-		@extend %font-Nunito-Regular-400;
-		font-size: 14px;
-		line-height: 22px;
-		text-align: center;
-	}
-}
-
-.facebook-link {
-}
-.svg-icons--facebook-dims {
-}
-.instagram-link {
-}
-.svg-icons--instagram-dims {
-}
-.twitter-link {
-}
-.svg-icons--twitter-dims {
-}
-.linkedin-link {
-}
-.svg-icons--linkedin-dims {
-}
-.subtitle {
+.footer{
+	background-color: grey;
 }
