--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,5 @@
 /* Fonts */
-// @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,600,300italic);
-// @import url(https://fonts.googleapis.com/css?family=Cormorant:regular,300italic,600);
+
 @import './base/fonts';
 /* Libs */
 @import './libs/*.scss';
@@ -21,14 +20,14 @@
 /*Desktop first*/
 /*@import './base/1920';*/
 /*@import './base/1600';*/
-// @import './base/1440';
+/*@import './base/1440';*/
 /*@import './base/1280';*/
-@import './base/1024';
-// @import './base/1000';
-@import './base/768';
+/*@import './base/1024';*/
+/*@import './base/1000';*/
+/*@import './base/768';*/
 /* @import './base/640';*/
-@import './base/480';
-@import './base/360';
+/*@import './base/480';*/
+/*@import './base/360';*/
 /* @import './base/320';*/
 
 /*Mobile first*/
