--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,4 +1,28 @@
-// @font-face {
-// 	font-family: 'Muli', Arial, sans-serif;
-// 	src: url('../fonts/Muli-Bold.ttf');
-// }
+@font-face {
+	font-family: 'Gilroy', Arial, sans-serif;
+	src: url('../fonts/gilroy-lightitalic.ttf');
+}
+@font-face {
+	font-family: 'Gilroy', Arial, sans-serif;
+	src: url('../fonts/gilroy-regular.ttf');
+}
+@font-face {
+	font-family: 'Gilroy', Arial, sans-serif;
+	src: url('../fonts/gilroy-medium.ttf');
+}
+@font-face {
+	font-family: 'Gilroy', Arial, sans-serif;
+	src: url('../fonts/gilroy-bold.ttf');
+}
+@font-face {
+	font-family: 'Microsoft Jhenghei', Arial, sans-serif;
+	src: url('../fonts/microsoft-jhenghei-regular.ttf');
+}
+@font-face {
+	font-family: 'Microsoft Jhenghei', Arial, sans-serif;
+	src: url('../fonts/microsoft-jhenghei-bold.ttf');
+}
+@font-face {
+	font-family: 'Oranienbaum', 'Times New Roman', Times, serif;
+	src: url('../fonts/Oranienbaum-Regular.ttf');
+}
