--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -23,6 +23,6 @@
 	src: url('../fonts/microsoft-jhenghei-bold.ttf');
 }
 @font-face {
-	font-family: 'Oranienbaum', 'Times New Roman', Times, serif;
+	font-family: 'Oranienbaum';
 	src: url('../fonts/Oranienbaum-Regular.ttf');
 }
