--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -62,7 +62,7 @@
 	}
 }
 
-%font-Gilroy-400 {
+%font-Microsoft-Jhenghei-400 {
 	font: {
 		family: 'Microsoft Jhenghei';
 		weight: 400;
@@ -70,7 +70,7 @@
 	}
 }
 
-%font-Gilroy-700 {
+%font-Microsoft-Jhenghei-700 {
 	font: {
 		family: 'Microsoft Jhenghei';
 		weight: 700;
@@ -78,7 +78,7 @@
 	}
 }
 
-%font-Gilroy-400 {
+%font-Oranienbaum-400 {
 	font: {
 		family: 'Oranienbaum';
 		weight: 400;
