--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -26,31 +26,31 @@
 	}
 	&__user {
 		display: flex;
+
 	}
 	&__phone {
 		display: none;
+		
 	}
-	&__phone-text {
+	&__phone-text {@extend %font-Gilroy-500;
+	}
+	&__user-tools{
+		position: relative;
+		right: 10px;
+		height: 36px;
+		width: 36px;
+		border-radius: 50%;
+		background-color: var(--color-accent);
+		display: grid;
+		justify-content: center;
+		align-items: center;
 	}
 	&__user-cab-link {
-		height: 36px;
-		width: 36px;
-		border-radius: 50%;
-		background-color: var(--color-accent);
 		margin-right: 8px;
-		display: grid;
-		justify-content: center;
-		align-items: center;
+
 	}
 	&__cart-link {
-		height: 36px;
-		width: 36px;
-		border-radius: 50%;
-		background-color: var(--color-accent);
-		display: grid;
-		justify-content: center;
-		align-items: center;
-		position: relative;
+
 	}
 	&__cart-items-qauntity {
 		text-align: center;
@@ -66,6 +66,14 @@
 		border-radius: 50%;
 
 	}
+	&__booking-block{
+		display: flex;
+		flex-direction: column;
+		row-gap: 7px;
+		position: absolute;
+		top: 316px;
+		left: calc(50% - 111px);
+	}
 	&__booking {
 		color: var(--color-text-light);
 	}
@@ -73,8 +81,6 @@
 		display: flex;
 		align-items: center;
 		text-transform: uppercase;
-		position: absolute;
-		left: calc(50% - 111px);
 		width: 222px;
 		height: 53px;
 		background-color: var(--color-accent);
@@ -103,12 +109,12 @@
 
 .booking {
 	&__link {
-		top: 316px;
+		
 	}
 }
 .delivery {
 	&__link {
-		top: 377px;
+
 		& > .header__booking-text-rus {
 			order: 3;
 			text-align: left;
