--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,7 +43,7 @@
 /*@import './base/1280';*/
 /*@import './base/1440';*/
 /*@import './base/1600';*/
-/*@import './base/1920';*/
+@import './base/1920';
 
 /*// .box {
 // 	background-image: url("large-balloons.jpg");
