--- a/src/scss/base/600.scss
+++ b/src/scss/base/600.scss
@@ -16,6 +16,8 @@
 			font-size: 36px;
 		}
 		&__slider-text-main {
+			margin: 0 auto;
+			max-width: 500px;
 			font-size: 60px;
 		}
 		&__slider-text-chi {
@@ -26,12 +28,8 @@
 		&__top {
 			padding: 20px;
 		}
-		&__user {
-			display: flex;
-		}
 		&__phone {
 			position: absolute;
-			display: block;
 			color: var(--color-text-light);
 			left: calc(50% - 92px);
 			top: 162px;
@@ -40,7 +38,6 @@
 			display: flex;
 			align-items: center;
 		}
-
 		&__user-tools{
 			height: 51px;
 			width: 51px;
@@ -64,10 +61,8 @@
 			top: 496px;
 			left: 20px;
 			right: 20px;
-			
 		}
 		&__booking-link {
-			left: calc(50% - 111px);
 			width: 270px;
 			height: 76px;
 			border-radius: 9px;
@@ -99,22 +94,10 @@
 			}
 		}
 	}
-
-	.booking {
-		&__link {
-			top: 316px;
-		}
-	}
 	.delivery {
 		&__link {
-			top: 377px;
 			& > .header__booking-text-rus {
-				order: 3;
-				text-align: left;
 				max-width: 135px;
-			}
-			& > .header__booking-separator {
-				order: 2;
 			}
 		}
 	}
