--- a/src/scss/base/1920.scss
+++ b/src/scss/base/1920.scss
@@ -4,11 +4,28 @@
 		&__slide {
 			min-height: 684px;
 		}
+		&__slider-arrows{
+			display: block;
+			width: 52px;
+			height: 52px;
+			position: absolute;
+			top: calc(50% - 26px);
+			z-index: 1;
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+		&__slider-prev {
+			left: 20px;
+			background-image: url('../img/sprite.svg#header--prev-arrow');
+		}
+		&__slider-next {
+			right: 20px;
+			background-image: url('../img/sprite.svg#header--next-arrow');
+		}
 		&__slider-text-block {
 			margin-top: 292px;
-
 		}
-		&__slider-text-top{
+		&__slider-text-top {
 			display: flex;
 			column-gap: 48px;
 			justify-content: center;
@@ -16,44 +33,22 @@
 			width: 970px;
 			margin: 0 auto;
 			line-height: 54px;
-			
 		}
 
-		&__slider-line-before{
+		&__slider-line-before {
 			width: 100%;
 			height: 2px;
 			background-color: #fff;
 		}
-		
-		&__slider-line-after{
+
+		&__slider-line-after {
 			width: 100%;
 			height: 2px;
 			background-color: #fff;
 		}
 		&__slider-text-top-text {
 			font-size: 40px;
-flex-shrink: 0;
-			// flex-wrap: nowrap;
-			
-			// flex-shrink: 0;
-			// flex-grow: 2;
-			// &::before {
-			// 	flex-shrink: 1;
-			// 	content: '';
-			// 	display: block;
-			// 	min-width: fit-content;
-			// 	height: 2px;
-			// 	background-color: var(--color-text-light);
-			// }
-			// &::after {
-			// 	flex-shrink: 1;
-			// 	content: '';
-			// 	display: block;
-			// 	min-width: fit-content;
-			// 	height: 2px;
-			// 	background-color: var(--color-text-light);
-			// }
-
+			flex-shrink: 0;
 		}
 		&__slider-text-main {
 			line-height: 79px;
@@ -88,8 +83,7 @@ flex-shrink: 0;
 			font-size: 16px;
 		}
 		&__booking-block {
-			left: 40px;
-			right: 40px;
+			left: calc(50% - 318px);
 		}
 		&__booking-link {
 			width: 307px;
@@ -116,8 +110,10 @@ flex-shrink: 0;
 		&__point-work-time {
 			display: flex;
 			column-gap: 12px;
+			align-items: center;
 		}
 		&__point-work-time-text {
+
 		}
 	}
 	.svg-footer--map-dims {
@@ -125,6 +121,12 @@ flex-shrink: 0;
 	}
 	.svg-header--time-dims {
 		width: 19px;
+	}
+	.svg-header--prev-arrow-dims {
+		width: 28px;
+		height: 52px;
+	}
+	.svg-header--next-arrow-dims {
 	}
 	.slick-dots {
 		bottom: 24px;
