--- a/src/scss/base/1920.scss
+++ b/src/scss/base/1920.scss
@@ -1,10 +1,14 @@
 //Mobile first
 @media (min-width: 1920px) {
+	:root {
+		--container-width: 1920px;
+		--container-padding: 24px;
+	}
 	.header {
 		&__slide {
 			min-height: 684px;
 		}
-		&__slider-arrows{
+		&__slider-arrows {
 			display: block;
 			width: 52px;
 			height: 52px;
@@ -113,7 +117,6 @@
 			align-items: center;
 		}
 		&__point-work-time-text {
-
 		}
 	}
 	.svg-footer--map-dims {
@@ -166,6 +169,31 @@
 		position: absolute;
 		top: 102px;
 		left: calc(50% - 80px);
+	}
+
+	// Features========================================================================
+	.features {
+		&__inner {
+		}
+		&__list {
+			grid-template-rows: none;
+			grid-template-columns: repeat(4, 1fr);
+			column-gap: 14px;
+		}
+		&__item {
+			width: 457px;
+			grid-template-columns: 130px 1fr;
+		}
+		&__text {
+			justify-self: start;
+			padding: 23px 24px 23px 0;
+		}
+		&__text-rus {
+			font-size: 18px;
+		}
+		&__text-chi {
+			font-size: 18px;
+		}
 	}
 }
 
