--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -11,7 +11,8 @@
 	--color-accent: #d3001f;
 	--color-hover: #ee0000;
 	--color-btn-separator: #7b0012;
-	--color-stroke-dark: rgba($color: #000000, $alpha: 0.3);
+	// --color-stroke-dark: rgba($color: #000000, $alpha: 0.3);
+	--color-stroke-dark: rgba(0, 0, 0, 0.3);
 	--color-stroke-medium: rgba($color: #141414, $alpha: 0.3);
 	--color-stroke-light: #d9d9d9;
 
