--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -1,12 +1,44 @@
 .section-menu {
 	&__inner {
+		margin-top: 18px;
+	}
+	&__title-container{
+		position: relative;
+		display: grid;
+		justify-items: center;
+		text-align: center;
+		margin-right: -10px;
+		margin-left: -10px;
+		&:before {
+			content: '';
+			position: absolute;
+			display: block;
+			top: 18px;
+			width: 100%;
+			height: 1px;
+			background-color: var(--color-stroke-dark);
+		}
+		&::after{
+			content: '';
+			display: block;
+			height: 71px;
+		}
 	}
 	&__title {
+		position: absolute;
 	}
+
 	&__title-rus {
-		
+		text-transform: uppercase;
+		font-size: 34px;
+		@extend %font-Oranienbaum-400;
+		background-color: var(--color-bg);
+		padding-right: 14px;
+		padding-left: 14px;
 	}
 	&__title-chi {
+		@extend %font-Microsoft-Jhenghei-400;
+		font-size: 24px;
 	}
 	&__card-list {
 	}
