--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -5,15 +5,15 @@
 	// --font-main: sans-serif;
 	// --font-accent: 'Playfair Display', serif;
 
-	--color-bg: #f5f5f5;
+	--color-bg: #fff;
 	--color-text-light: #ffffff;
 	--color-text-dark: #141414;
 	--color-accent: #d3001f;
 	--color-hover: #ee0000;
 	--color-btn-separator: #7b0012;
-	// --color-stroke-dark: rgba($color: #000000, $alpha: 0.3);
+
 	--color-stroke-dark: rgba(0, 0, 0, 0.3);
-	--color-stroke-medium: rgba($color: #141414, $alpha: 0.3);
+	--color-stroke-medium: rgba(20, 20, 20, 0.3);
 	--color-stroke-light: #d9d9d9;
 
 	--laptop-size: 1199px;
