--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -53,13 +53,25 @@
 	}
 }
 .menu-categories {
+	position: relative;
+
 	&__list {
 		display: flex;
 		background-color: #eeeeee;
-		// overflow: hidden;
+		overflow: hidden;
 		padding: 5px;
 		border-radius: 25px 0 0 25px;
-		background-image: linear-gradient(90deg, transparent 80%, #eeeeee 100%);
+
+		&::after {
+			content: '';
+			top: 0;
+			right: 0;
+			display: block;
+			position: absolute;
+			width: 80px;
+			height: 100%;
+			background-image: linear-gradient(90deg, transparent 0%, #eeeeee 90%);
+		}
 	}
 	&__item {
 		display: flex;
@@ -74,9 +86,18 @@
 	&__link {
 	}
 	&__text-rus {
+		&::after {
+			content: ' / ';
+		}
 	}
 	&__text-chi {
 		@extend %font-Microsoft-Jhenghei-700;
+	}
+	&__menu-arrow-btn{
+		position: absolute;
+		top: calc(50% - 14px);
+		right: 2px;
+		z-index: 1;
 	}
 }
 .dish-card {
@@ -120,4 +141,9 @@
 .svg-main--menu--cart-dims {
 	width: 31px;
 	height: 31px;
+}
+.svg-main--menu--arrow-dims {
+	width: 28px;
+	height: 28px;
+
 }
