--- a/src/scss/base/_containers.scss
+++ b/src/scss/base/_containers.scss
@@ -1,8 +1,16 @@
 .container {
 	padding: 0 var(--container-padding);
-	max-width: var(--container-width);
+	
+	// Desctop first
+	// 	max-width: var(--container-width);
+
+	// Mobile first
+	min-width: var(--container-width);
 	margin: 0 auto;
 }
+
+
+
 
 .container-right {
 	/* overflow-x: hidden; */
