--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -7,6 +7,7 @@
 		grid-template-rows: repeat(2, 1fr);
 		grid-template-columns: repeat(2, 1fr);
 		gap: 7px 16px;
+		justify-items: center;
 	}
 	&__item {
 		display: grid;
@@ -15,9 +16,13 @@
 		border-radius: 10px;
 		align-items: center;
 		justify-items: center;
+		width: 100%;
+		
+
 	}
 	&__text {
 		padding: 10px 9px 10px 0;
+		justify-self: start;
 	}
 	&__text-rus {
 		display: block;
