--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -13,7 +13,7 @@
 	--color-btn-separator: #7b0012;
 
 	--color-stroke-dark: rgba(0, 0, 0, 0.3);
-	--color-stroke-medium: rgba(20, 20, 20, 0.3);
+	--color-stroke-medium: #d9d9d9;
 	--color-stroke-light: #d9d9d9;
 
 	--laptop-size: 1199px;
