--- a/src/scss/base/600.scss
+++ b/src/scss/base/600.scss
@@ -186,4 +186,362 @@
 		width: 74px;
 		height: 74px;
 	}
+	// Menu=======================================================================
+	.section-menu {
+		&__inner {
+			margin-top: 42px;
+		}
+		&__title-container {
+			margin-right: -20px;
+			margin-left: -20px;
+			margin-bottom: 18px;
+			&:before {
+				top: 32px;
+				height: 2px;
+			}
+			&::after {
+				height: 116px;
+			}
+		}
+		&__title {
+		}
+
+		&__title-rus {
+			font-size: 56px;
+			padding-right: 23px;
+			padding-left: 23px;
+		}
+		&__title-chi {
+			@extend %font-Microsoft-Jhenghei-400;
+			font-size: 40px;
+		}
+		&__card-list {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			gap: 17px 20px;
+			margin-bottom: 42px;
+		}
+		&__see-all-btn {
+			grid-template-columns: 4fr 1px 6fr;
+			margin-bottom: 70px;
+		}
+		&__see-all-text-chi {
+		}
+		&__see-all-separator {
+		}
+		&__see-all-text-rus {
+		}
+	}
+	.menu-categories {
+		&__list {
+			padding: 6px;
+			border-radius: 31px 0 0 31px;
+			&::after {
+				background-image: linear-gradient(90deg, transparent 0%, #eeeeee 50%);
+				width: 120px;
+			}
+		}
+		&__item {
+			display: flex;
+			padding: 11px 22px;
+			border-radius: 25px;
+		}
+		&__item--active {
+		}
+		&__link {
+		}
+		&__text-rus {
+			font-size: 20px;
+			&::after {
+			}
+		}
+		&__text-chi {
+			font-size: 20px;
+		}
+		&__menu-arrow-btn {
+			top: calc(50% - 17.5px);
+			right: 5px;
+		}
+	}
+	.dish-card {
+		margin-top: 42px;
+		padding-bottom: 14px;
+		&:nth-child(1) {
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-1.png);
+			}
+			& .dish-card__label-hit {
+				display: none;
+			}
+			& .dish-card__label-sale {
+				display: none;
+			}
+		}
+		&:nth-child(2) {
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-2.png);
+			}
+			& .dish-card__label-hit {
+				display: none;
+			}
+		}
+		&:nth-child(3) {
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-3.png);
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+			& .dish-card__label-hit {
+				display: none;
+			}
+			& .dish-card__label-sale {
+				display: none;
+			}
+		}
+		&:nth-child(4) {
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-4.png);
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+			& .dish-card__label-sale {
+				display: none;
+			}
+		}
+		&:nth-child(5) {
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-5.png);
+			}
+			& .dish-card__label-hit {
+				display: none;
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+		}
+		&:nth-child(6) {
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-6.png);
+			}
+		}
+		&:nth-child(7) {
+			display: none;
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-7.png);
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+			& .dish-card__label-sale {
+				display: none;
+			}
+		}
+		&:nth-child(8) {
+			display: none;
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-8.png);
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+		}
+		&:nth-child(9) {
+			display: none;
+			&.dish-card__img-container {
+				background-image: url(../img/main/menu/dish-9.png);
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+		}
+		&:nth-child(10) {
+			display: none;
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-10.png);
+			}
+			& .dish-card__label-hit {
+				display: none;
+			}
+			& .dish-card__label-new {
+				display: none;
+			}
+		}
+		&:nth-child(11) {
+			display: none;
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-11.png);
+			}
+		}
+		&:nth-child(12) {
+			display: none;
+			& .dish-card__img-container {
+				background-image: url(../img/main/menu/dish-12.png);
+			}
+			& .dish-card__label-hit {
+				display: none;
+			}
+		}
+
+		&__img-link {
+		}
+		&__img-container {
+			min-height: 236px;
+			min-width: 270px;
+			background-size: cover;
+			margin-left: -1px;
+			margin-right: -1px;
+			margin-top: -1px;
+			background-repeat: no-repeat;
+			background-position: center;
+			border-radius: 10px;
+			border-bottom: 1px solid var(--color-stroke-medium);
+		}
+		&__labels {
+			display: flex;
+			column-gap: 3px;
+			position: absolute;
+			top: 14px;
+			left: 19px;
+			color: var(--color-text-light);
+			text-transform: uppercase;
+			font-size: 11px;
+			letter-spacing: 0.96px;
+		}
+		&__label-new {
+			display: grid;
+			justify-items: center;
+			align-items: center;
+			border-radius: 12px;
+			min-width: 44px;
+			min-height: 23px;
+			background-color: #006cff;
+		}
+		&__label-hit {
+			display: grid;
+			justify-items: end;
+			position: relative;
+			padding-right: 9px;
+			align-items: center;
+			border-radius: 12px;
+			min-width: 44px;
+			min-height: 23px;
+			background-color: #ff0000;
+		}
+		&__label-sale {
+			display: grid;
+			justify-items: center;
+			align-items: center;
+			border-radius: 12px;
+			min-width: 44px;
+			min-height: 23px;
+			background-color: #aa08b9;
+		}
+		&__text-container {
+			margin-top: 12px;
+			padding-right: 19px;
+			padding-left: 19px;
+		}
+		&__title {
+			color: var(--color-text-dark);
+			margin-bottom: 0px;
+		}
+		&__title-chi {
+			@extend %font-Microsoft-Jhenghei-700;
+			font-size: 18px;
+			&::after {
+				margin-top: 6px;
+				margin-bottom: 6px;
+				content: '';
+				display: block;
+				width: 45px;
+				height: 1px;
+				background-color: #000;
+			}
+		}
+		&__title-rus {
+			@extend %font-Gilroy-700;
+			font-size: 24px;
+			line-height: 98%;
+			margin-bottom: 6px;
+		}
+		&__weight {
+			font-size: 14px;
+			margin-bottom: 29px;
+		}
+		&__price-block {
+			font-size: 20px;
+			margin-bottom: 14px;
+			display: flex;
+			column-gap: 20px;
+		}
+		&__price-current {
+			@extend %font-Gilroy-700;
+		}
+		&__price-old {
+			text-decoration: line-through;
+		}
+		&__purchase {
+			display: grid;
+			grid-template-columns: 1fr 79px;
+			column-gap: 15px;
+		}
+		&__counter-block {
+			border: 1px solid var(--color-stroke-dark);
+			border-radius: 10px;
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			font-size: 24px;
+			justify-items: center;
+			align-items: center;
+			height: 51px;
+		}
+		&__minus {
+			margin-left: 16px;
+			justify-self: start;
+			width: 9px;
+			height: 3px;
+			background-color: var(--color-text-dark);
+		}
+		&__counter {
+			width: 60px;
+			text-align: center;
+			@extend %font-Gilroy-700;
+		}
+		&__plus {
+			width: 9px;
+			height: 9px;
+			background-color: var(--color-text-dark);
+			margin-right: 16px;
+			justify-self: end;
+			clip-path: polygon(
+				3px 3px,
+				3px 0,
+				6px 0,
+				6px 3px,
+				9px 3px,
+				9px 6px,
+				6px 6px,
+				6px 9px,
+				3px 9px,
+				3px 6px,
+				0 6px,
+				0 3px
+			);
+		}
+		&__add-to-cart-btn {
+			background-color: var(--color-accent);
+			padding: 10px 24px;
+			border-radius: 10px;
+		}
+	}
+	.svg-main--menu--cart-dims {
+		width: 31px;
+		height: 31px;
+	}
+	.svg-main--menu--arrow-dims {
+		width: 35px;
+		height: 35px;
+	}
 }
