--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -42,7 +42,12 @@
 		font-size: 24px;
 	}
 	&__card-list {
+		margin-top: 14px;
 		margin-bottom: 24px;
+		display: grid;
+		grid-template-columns: 1fr;
+		// grid-template-rows: repeat(6, 1fr);
+		row-gap: 14px;
 	}
 	&__see-all-btn {
 		border-radius: 10px;
@@ -85,7 +90,7 @@
 		overflow: hidden;
 		padding: 5px;
 		border-radius: 25px 0 0 25px;
-
+		
 		&::after {
 			content: '';
 			top: 0;
@@ -125,10 +130,12 @@
 	}
 }
 .dish-card {
+	display: grid;
+	grid-template-rows: 236px 1fr 1fr;
 	border: 1px solid var(--color-stroke-medium);
 	border-radius: 10px;
-	margin-top: 14px;
 	padding-bottom: 18px;
+	height: 517px;
 	&:nth-child(1) {
 		& .dish-card__img-container {
 			background-image: url(../img/main/menu/dish-1.png);
@@ -307,6 +314,14 @@
 		padding-right: 19px;
 		padding-left: 19px;
 	}
+	&__price-and-purchase-container {
+		display: grid;
+		grid-template-rows: 1fr 51px;
+		align-items: end;
+		padding-right: 19px;
+		padding-left: 19px;
+		row-gap: 14px;
+	}
 	&__title {
 		color: var(--color-text-dark);
 		margin-bottom: 0px;
@@ -325,6 +340,11 @@
 		}
 	}
 	&__title-rus {
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		-webkit-line-clamp: 4;
+		overflow: hidden;
+		max-height: 94px;
 		@extend %font-Gilroy-700;
 		font-size: 24px;
 		line-height: 98%;
@@ -333,12 +353,12 @@
 	&__weight {
 		font-size: 14px;
 		margin-top: 0;
-		min-height: 100%;
-		margin-bottom: auto;
+
+		margin-bottom: 29px;
 	}
 	&__price-block {
 		font-size: 20px;
-		margin-bottom: 14px;
+		// margin-bottom: 14px;
 		display: flex;
 		column-gap: 20px;
 	}
